--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -2,8 +2,8 @@
 
   <div ng-if='mobile_app_service.inWelcomeBackView() || mobile_app_service.inFirstEnterView()'>
     <div class="logo-medium"> <img src="<%= asset_path 'logo-medium.png' %>" height="63" width="257"> </div>
-    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' > {{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %>, {{getEmployee(current_emp_id).name}}</div>
-    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'> {{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %>, {{getEmployee(current_emp_id).name}}</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' > {{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %> {{getEmployee(current_emp_id).name}}</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'> {{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %> {{getEmployee(current_emp_id).name}}</div>
     <div class="welcome-p" >{{mobile_app_service.t("welcome_sentence")}}<%#= I18n.t('questionnaire.welcome_sentence') %></div>
 
     <div class='start-button btn-continue' ng-click="mobile_app_service.setQuestionnaireView()">
@@ -93,8 +93,8 @@
 <div ng-if='mobile_app_service.isLangRtl()' class="background" >
   <div ng-if='mobile_app_service.inWelcomeBackView() || mobile_app_service.inFirstEnterView()' dir='rtl'>
     <div class="logo-medium"> <img src="<%= asset_path 'logo-medium.png' %>" height="63" width="257"> </div>
-    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' >{{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %> {{getEmployee(current_emp_id).name}},</div>
-    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'>{{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %> {{getEmployee(current_emp_id).name}},</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inWelcomeBackView()' >{{mobile_app_service.t("welcome_back")}}<%#= I18n.t('questionnaire.welcome_back') %> {{getEmployee(current_emp_id).name}}</div>
+    <div class="welcome-back" ng-show='mobile_app_service.inFirstEnterView()'>{{mobile_app_service.t("welcome")}}<%#= I18n.t('questionnaire.welcome') %> {{getEmployee(current_emp_id).name}}</div>
     <div class="welcome-p" ng-bind-html='mobile_app_service.t("welcome_sentence")'><%#= I18n.t('questionnaire.welcome_sentence') %></div>
     <div class='start-button btn-continue' ng-click="mobile_app_service.setQuestionnaireView()">
       <div class='left-arrow'></div>
