--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -16,11 +16,11 @@
   <div>
     <div ng-if='mobile_app_service.inFinishView()' >
       <div class="background">
-        <div class="thank-you">{{mobile_app_service.t("thank_you")}}<%#= I18n.t('questionnaire.thank_you') %></div>
-        <div class="thank-you-p">{{mobile_app_service.t("thank_you_note")}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto;">
+        <div class="thank-you">{{closeTitle(mobile_app_service.t("thank_you"))}}<%#= I18n.t('questionnaire.thank_you') %></div>
+        <div class="thank-you-p">{{closeSubTitle(mobile_app_service.t("thank_you_note"))}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
+        <div ng-if="is_referral_btn" style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto;">
           <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right; text-align: center;" ng-href="{{referralUrl()}}">
-            {{mobile_app_service.t("click_to_answer_additional_questions")}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
+            {{referralBtnText(mobile_app_service.t("click_to_answer_additional_questions"))}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
@@ -105,11 +105,11 @@
   <div>
     <div ng-if='mobile_app_service.inFinishView()' >
       <div class="background">
-        <div class="thank-you" dir='rtl'>{{mobile_app_service.t("thank_you")}}<%#= I18n.t('questionnaire.thank_you') %></div>
-        <div class="thank-you-p">{{mobile_app_service.t("thank_you_note")}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
-        <div style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto; text-algin: center;">
+        <div class="thank-you" dir='rtl'>{{closeTitle(mobile_app_service.t("thank_you"))}}<%#= I18n.t('questionnaire.thank_you') %></div>
+        <div class="thank-you-p" dir='rtl'>{{closeSubTitle(mobile_app_service.t("thank_you_note"))}}<%#= I18n.t('questionnaire.thank_you_note') %></div>
+        <div ng-if="is_referral_btn" style="direction: rtl; border: solid orange 2px; width: 258px; height: 120px; font-size: 24px; margin: 40px auto; text-algin: center;">
           <a style="margin: 0 auto; color: black; text-decoration: none; line-height: 1.5; padding: 10px; float: right;text-align: center;" ng-href="{{referralUrl()}}">
-            {{mobile_app_service.t("click_to_answer_additional_questions")}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
+            {{referralBtnText(mobile_app_service.t("click_to_answer_additional_questions"))}}<%#= I18n.t('questionnaire.click_to_answer_additional_questions')  %></a>
         </div>
         <div class="logo-sm"> <img src="<%= asset_path 'logo-medium.png' %>" height="25" width="103"> </div>
       </div>
